[ BUGFIX ] align success banner

--- a/client/styles/_challenge.scss
+++ b/client/styles/_challenge.scss
@@ -102,8 +102,8 @@
 	height: 8%;
 	// width: 100%;
 	// margin-top: 2%;
-	width: 77.5%;
-	margin-top: .1%;
+	width: 100%;
+	margin-top: 1%;
 	color: #FFF;
 	font-weight: bold;
 	font-size: 40px;
